--- a/public/css/light_mode.css
+++ b/public/css/light_mode.css
@@ -260,6 +260,30 @@ tr.excluded:hover .excludeToggle .fa-ban {
     color: black;
 }
 
+.fa-check-circle {
+    color: green;
+}
+
+.fa-exclamation-circle {
+    color: red !important;
+}
+
+input.invalid {
+    border-bottom-color: red !important;
+}
+
+.fa-exclamation-triangle {
+    color: darkorange !important;
+}
+
+.fa-spinner {
+    color: blue;
+}
+
+input.loading {
+    border-bottom-color: blue !important;
+}
+
 .popup span.popup-top-left,
 .popup span.popup-top,
 .popup span.popup-top-right,
